# track

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Readme.md  applicationinfo.py  idle.py  poetry.toml  progress.md  pylintrc  pyproject.toml  pytest.ini  readme.md  test  test_active_applications.py  test_applicationinfo.py  test_rules_model.py  test_server.py  test_time_tracker.py  test_timegraph.py  test_timetracker.py  test_track_qt_common.py  time_tracker.py  time_tracker_qt.py  timegraph.py  timetracker.py  track  track-cli  track-cli.py  track-server  track-show.py  track-show.ui  track-wingide.wpr  track-wingide6.wpr  track.py  track.ui  track.wpr  track_cli.py  track_common.py  track_dev  track_server.py  (+2 more)
application/: cli.py
application/core/: __init__.py  active_applications.py  common.py  time_tracker.py  util.py
application/core/desktop_usage_info/backend_windows/: idle.py
application/core/desktop_usage_info/backend_x11/: idle.py
application/server/: __init__.py
application/ui/: __init__.py  active_applications_qtmodel.py  mainwindow.py  mainwindow.ui  qspoiler.py  qt_common.py  rules_model_qt.py  time_tracker_qt.py  timegraph.py
desktop_usage_info/: __init__.py
desktop_usage_info/backend_windows/: applicationinfo.py  idle.py
desktop_usage_info/backend_x11/: applicationinfo.py
doc/: architecture-thoughts.txt
test/: test_active_applications.py  test_applicationinfo.py  test_rules_model.py  test_server.py  test_time_tracker.py  test_timegraph.py  test_track_qt_common.py
track/: __init__.py  cli.py  track-server  track.desktop
track/core/: __init__.py  active_applications.py  common.py  errors.py  time_tracker.py  util.py
track/core/desktop_usage_info/: __init__.py
track/core/desktop_usage_info/backend_windows/: applicationinfo.py  idle.py
track/core/desktop_usage_info/backend_x11/: applicationinfo.py  idle.py
track/server/: __init__.py
track/ui/: __init__.py  active_applications_qtmodel.py  mainwindow.py  mainwindow.ui  qreordertableview.py  qspoiler.py  qt_common.py  rules_model_qt.py  time_tracker_qt.py  timegraph.py
track_base/: __init__.py  active_applications.py  errors.py  rules_model.py  time_tracker.py  track_common.py  util.py
track_qt/: __init__.py  active_applications.py  active_applications_qtmodel.py  qreordertableview.py  qspoiler.py  qt_common.py  rules_model.py  rules_model_qt.py  time_tracker_qt.py  timegraph.py
